--- a/client/src/Styles/appstyle.scss
+++ b/client/src/Styles/appstyle.scss
@@ -12,6 +12,7 @@
 display: flex;
   flex-direction: column;  
   width: 400px;
+  margin: 30px;
   
   
     @media (min-width: 1200px) {
@@ -29,14 +30,9 @@ display: flex;
 
 
   
-  .weatherdiv {
-    height: 350px;   // Adjust the height as needed
-    overflow-y: auto;
-    padding: 10px;
-    border: 1px solid #ccc;
-    margin-bottom: 20px;
+  
  
-  } 
+  
   
   
   .newsdiv {
